# opennx

./: .gitignore  0001-0.16-alt17.svn708.patch  0001-0.16-alt17.svn724.patch  0001-Change-logo.patch  0002-0.16-alt17.svn724.patch  0002-Add-wizard-button-to-start-menu.patch  0002-Change-logo.patch  0002-Initial-build-with-gitum.patch  0003-Add-translate-for-Wizard-button.patch  0003-Add-wizard-button-to-start-menu.patch  0003-Build-new-version-opennx-0.16-eter17.svn724.patch  0003-Change-logo.patch  0004-Add-translate-for-Wizard-button.patch  0004-Add-wizard-button-to-start-menu.patch  0004-Initial-build-with-gitum.patch  0004-Update-translations.patch  0005-Add-wizard-button-to-start-menu.patch  0005-Build-new-version-opennx-0.16-eter18.svn724.patch  0005-Translate-of-Resume-button-correct.patch  0005-Update-translations.patch  0006-Add-copy-icon-in-spec.patch  0006-Add-translate-for-Wizard-button.patch  0006-Now-all-paths-write-to-config-after-start.patch  0006-Translate-of-Resume-button-correct.patch  0007-Added-translation-of-another-few-phrases.patch  0007-Build-new-version-opennx-0.16-eter19.svn724.patch  0007-Now-all-paths-write-to-config-after-start.patch  0007-Update-translations.patch  0008-Add-Num-Lock-state-as-a-parameter-to-be-send.patch  0008-Add-translate-for-Wizard-button.patch  0008-Added-translation-of-another-few-phrases.patch  0008-Translate-of-Resume-button-correct.patch  0009-Add-Num-Lock-state-as-a-parameter-to-be-send.patch  0009-Edit-a-mistake-in-output-string-with-parameters.patch  0009-Now-all-paths-write-to-config-after-start.patch  0009-Update-translations.patch  0010-Added-translation-of-another-few-phrases.patch  0010-Edit-a-mistake-in-output-string-with-parameters.patch  0010-Translate-of-Resume-button-correct.patch  0010-eterbug-9384-Add-space-for-parameters-to-be-separate.patch  (+79 more)
.gear/: opennx.spec  rules
opennx/: AboutDialog.cpp  AboutDialog.h  AboutDialog_symbols.h  AsyncProcess.cpp  AsyncProcess.h  CardWaiter.cpp  CardWaiter.h  CardWaiterDialog.cpp  CardWaiterDialog.h  CardWaiterDialog_symbols.h  ChangeLog  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog_symbols.h  DebugStringGrabber.cpp  DebugStringGrabber.h  ExtHtmlWindow.cpp  ExtHtmlWindow.h  ForeignFrame.cpp  ForeignFrame.h  ForeignFrame_symbols.h  INSTALL  Icon.cpp  Icon.h  Info.plist.in  KeyDialog.cpp  KeyDialog.h  KeyDialog_symbols.h  LibOpenSC.cpp  LibOpenSC.h  LibUSB.cpp  LibUSB.h  LogDialog.cpp  LogDialog.h  LogDialog_symbols.h  LogNull.h  LoginDialog.cpp  LoginDialog.h  LoginDialog_symbols.h  MacOSX.c  (+164 more)
opennx/.deps/: bin2hdr.Po  opennx-AboutDialog.Po  opennx-AsyncProcess.Po  opennx-CardWaiterDialog.Po  opennx-ConnectDialog.Po  opennx-ExtHtmlWindow.Po  opennx-ForeignFrame.Po  opennx-Icon.Po  opennx-KeyDialog.Po  opennx-LibOpenSC.Po  opennx-LibUSB.Po  opennx-LogDialog.Po  opennx-LoginDialog.Po  opennx-MacOSX.Po  opennx-MyDynlib.Po  opennx-MyIPC.Po  opennx-MySession.Po  opennx-MyValidator.Po  opennx-MyWizard.Po  opennx-MyXmlConfig.Po  opennx-PanicDialog.Po  opennx-ProxyPasswordDialog.Po  opennx-ProxyPropertyDialog.Po  opennx-PulseAudio.Po  opennx-QuitDialog.Po  opennx-RdpImageSettingsDialog.Po  opennx-RdpPropertyDialog.Po  opennx-ResumeDialog.Po  opennx-SessionAdmin.Po  opennx-SessionList.Po  opennx-SessionProperties.Po  opennx-ShareProperties.Po  opennx-SimpleXauth.Po  opennx-SupressibleMessageDialog.Po  opennx-TextViewer.Po  opennx-UnixImageSettingsDialog.Po  opennx-UsbFilterDetailsDialog.Po  opennx-UsbIp.Po  opennx-VncImageSettingsDialog.Po  opennx-VncPropertyDialog.Po  (+24 more)
opennx/autom4te.cache/: output.1  requests  traces.0  traces.1
opennx/debian/: changelog  changelog.in  control  copyright  dirs  mkchangelog.pl  postinst  prerm  rules  triggers
opennx/docs/: Makefile  Makefile.in
opennx/extres/: opennx-wizard.icns
opennx/extres/xdg/: innovidata-opennx-admin.desktop  innovidata-opennx-wizard.desktop  innovidata-opennx.desktop  innovidata-opennx.directory
opennx/m4/: ChangeLog  Makefile.am  rcversion.m4
opennx/man/: Makefile.am
opennx/opensc/: opensc-config
opennx/packaging/MacOSX/: Makefile  Makefile.am  Makefile.in  OpenNXAdmin.de.infoplist  OpenNXWizard.de.infoplist  OpenSC.webloc  admin.plist.in  buildnx  buildopensc  buildsmbclient  macuninstall.de.infoplist  mkbundle  mkdmg  opennx-main.plist  opennx-main.plist.in  opennx-uninstall  opennx.plist  opennx.plist.in  opensc-config.tmpl  pkg.plist  pkg.plist.in  rootwrapper.script  wizard.plist.in
opennx/packaging/MacOSX/pkgResources/: InstallationCheck  InstallationCheck.strings  License.html
opennx/packaging/MacOSX/pulse/: Makefile  Makefile.am  Makefile.in  libtool.shasum  pulseaudio.shasum  urls.txt
opennx/packaging/win32/: Makefile  Makefile.am  Makefile.in  findrequires.pl  findrequires.pl.in  isccwrap.sh  isccwrap.sh.in  lgpl.rtf  opennx.iss
opennx/packaging/win32/cygnx/: Makefile  Makefile.am  Makefile.in  README  getnxsetup
opennx/packaging/win32/nx/: Makefile  Makefile.am  Makefile.in  jpeg.md5sum  libjpeg.md5sum  libpng.md5sum  nxcomp.md5sum  nxesd.md5sum  nxproxy.md5sum  urls.txt
opennx/packaging/win32/pulse/: Makefile  Makefile.am  Makefile.in  libatomic_ops.md5sum  liboil.md5sum  libsamplerate.md5sum  libsndfile.md5sum  pulseaudio.md5sum  urls.txt
opennx/packaging/win32/xming/: Makefile  Makefile.am  Makefile.in
opennx/patches/: jpeg-autoconf.patch  nxcomp-autotools.patch  nxcompsh-autotools.patch  nxesd-autotools.patch  nxproxy-autotools.patch  nxservice-autotools.patch  nxssh-dynopensc.patch
opennx/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  en@quot.po  ja.gmo  ja.po  mxclient.pot  opennx.pot  ru.gmo  ru.po
opennx/res/: about.html  de_about.html  lgpl.rtf  lgpl.xml  mxclient.rc  mxclient.xrc  nx-desktop.icns  nx.icns  nx.xcf  opennx-admin.icns  opennx-admin.xcf  opennx-wizard.xcf  opennx.rc  opennx.rc.in  opennx.xrc  tracelog.xrc
opennx/share/applnk/clean/: opennx-admin.desktop  opennx-wizard.desktop  opennx.desktop
opennx/share/applnk/mdk/: menu  opennx
opennx/share/applnk/mime-kde/: nx-session.desktop
(+75 files in other folders)
